# Design-Pattern-in-Modern-c-

./: README.md
Bridge/: Bridge.cpp
Command/: Command.cpp  CompositeCommand.cpp
Decorator/: DynamicDecorator.cpp  FunctionalDecorator.cpp  StaticDecorator.cpp
Factories/: 1_PointExample.cpp  2_FactoryMethod.cpp  3_Factory.cpp  4_InnerFactory.cpp
Factories/Abstract Factory/: AbstractFactory.cpp
Observer/: Observable.hpp  Observer.cpp  Observer.hpp
Observer/ObserverWithBoost/: CMakeLists.txt  ObserverWithBoost.cpp
Prototype/: PrototypeFactory.cpp
Proxy/: CommunicationProxy.cpp  PropertyProxy.cpp  VirtualProxy.cpp
Singleton/: 1.Singleton.cpp  2.Multiton.cpp  capitals.txt
Strategy/: 1.DynamicStrategy.cpp
